# pixelrust

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  makefile
app/: Cargo.toml  LICENSE  package-lock.json  package.json  webpack.config.js
app/css/: main.less
app/js/: index.js
app/src/: lib.rs
app/static/: index.html
src/: color.rs  main.rs  pixel.rs  pixel_map.rs  render_thread.rs
