[package]
name = "pixelrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "full"] }
mjpeg_rs = "*"
image = "0.24.7"
rayon = "1.8.0"
