[package]
name = "pixelrust"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/HyperTNTClown/pixelrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
rapid-qoi = "0.6.1"
fdeflate = "0.3.4"
base64 = "0.21.7"
fastwebsockets = "0.6.0"
sha1 = "0.11.0-pre.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# [profile.dev]
# lto = true
# incremental = true
# opt-level = 1
