[package]
name = "pixelrust-frontend-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/HyperTNTClown/pixelrust"
description = "PixelRust frontend compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["console", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "Response", "Blob", "ImageData", "EventSource", "MessageEvent", "EventListener", "TextEncoder", "Performance", "WebSocket", "Location", "Headers"] }
console_error_panic_hook = "0.1.7"
rapid-qoi = "0.6.1"
js-sys = "0.3.67"
fdeflate = "0.3.4"